# ckanta

./: .drone.yml  .gitignore  README.md  manage.sh  pyproject.toml  setup-local.sh
ckanta/: __init__.py  __main__.py  actions.py  commands.py  common.py  config.py
ckanta/cli/: __init__.py  __main__.py
ckanta/deprecated/: __main__.py  actions.py
tests/: conftest.py  test_ckanta.py  test_commands.py  test_common.py  test_config.py
